--- a/Data/config/envconfig.json
+++ b/Data/config/envconfig.json
@@ -1,9 +1,9 @@
 {
-  "BOTNAME": "𝐅𝐀𝐑𝐀𝐁𝐈'𝐒 𝐉𝐀𝐍𝐔 𝐁𝐎𝐓",
-  "BOTNICK": "𝐅𝐀𝐑𝐀𝐁𝐈'𝐒 𝐉𝐀𝐍𝐔",
+  "BOTNAME": "𝗟𝗚𝗡𝗗 𝗔𝗟𝗜𝗬𝗔 𝗜𝗡𝗦𝗜𝗗𝗘 𝐁𝐎𝐓",
+  "BOTNICK": "𝗔𝗟𝗜𝗬𝗔 𝗜𝗡𝗦𝗜𝗗𝗘",
   "PREFIX": ".",
   "ADMINBOT": [
-    "61573781736874"
+    "61573960335650"
   ],
   "REACT_DELETE_EMOJI": "😡",
   "PREFIX_ENABLED": true,
