--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261582370889563%22%3A%228MRwyPOt%22%7D",
+        "value": "%7B%2261582370889563%22%3A%22Ecl1CQbX%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.269Z",
-        "lastAccessed": "2025-12-29T08:45:55.270Z"
+        "creation": "2025-12-29T09:44:13.853Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.270Z",
-        "lastAccessed": "2025-12-29T08:45:55.270Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "pas",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "wl_cbv",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "wd",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "c_user",
@@ -104,34 +104,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "fr",
-        "value": "1JGg1LoUWOuVmV1ap.AWd824oRDCq5D_U5bdC4l12picsW9t6r_qGpoSEOl47BpaRzK5w.BpUj_A..AAA.0.0.BpUj_A.AWcNCaGR9vc4-RQqQrQyQUccVFY",
+        "value": "1ZeYQ3IRSEWc3EzKA.AWf544AhY-JEDaHWzSV_nmXFAvIE-OlCwXV5o1DI-akNteDCiNo.BpUk1s..AAA.0.0.BpUk1s.AWdNLVLb3NaO55CHtsmCoiAQzpo",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     },
     {
         "key": "xs",
-        "value": "34%3AGf1wdaO9u_sdXQ%3A2%3A1766997948%3A-1%3A-1%3A%3AAczIzKqjk0TOGGkru-XWaIoe4f8R5xecZjPeVMVlQQ",
+        "value": "21%3AJ1V9hpiZU9WOEg%3A2%3A1767001449%3A-1%3A-1%3A%3AAcw-lyN_jRAbzfyP95H7nUwzVp2OV4mVXJgiWKhJkg",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766997954356%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-29T08:45:55.271Z",
-        "lastAccessed": "2025-12-29T08:45:55.271Z"
+        "creation": "2025-12-29T09:44:13.854Z",
+        "lastAccessed": "2025-12-29T09:44:13.854Z"
     }
 ]
