--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261585333299090%22%3A%22mFI1zK1m%22%2C%2261584741196930%22%3A%22ttSS3ouy%22%2C%2261585780345250%22%3A%22n5gVqV0U%22%7D",
+        "value": "%7B%2261582370889563%22%3A%22Etb5Mfex%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.546Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B688x360x2",
+        "key": "datr",
+        "value": "hh9KaUA_qSbDDG5WcTLOGndd",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
         "key": "sb",
-        "value": "ql1IaZKqJ9LusSXC7_YpwER5",
+        "value": "hh9KaV67qn1qF2yhAix9Ol32",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
         "key": "ps_n",
@@ -41,88 +41,97 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
-        "key": "oo",
-        "value": "v1",
+        "key": "vpd",
+        "value": "v1%3B760x393x2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
-        "key": "datr",
-        "value": "f7lQafMLPb4_NTsU_TOtO3UZ",
+        "key": "dpr",
+        "value": "3.0234789848327637",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61585462392111",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
-    },
-    {
-        "key": "xs",
-        "value": "34%3Ai2NYYFgq6sXZ7Q%3A2%3A1766987050%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
         "key": "pas",
-        "value": "61585333299090%3ALLhcklHzOS%2C61585171757289%3AlJJTNIokyL%2C61584741196930%3ANVM0E1HKBf%2C61585780345250%3AKcGwCO2gIz%2C61585840043798%3AFRWYB3PIPM%2C100004900666098%3AcdHMtDrYwO%2C61551050906770%3APCHo5i5f0C%2C61585462392111%3AA3MOWWm39G",
+        "value": "61584589464528%3AauEmNFoUPM%2C61582370889563%3A397eywQrrY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
-    },
-    {
-        "key": "fr",
-        "value": "09O2GOOprYvHXdYpY.AWeW0qy0WHFjFYhVaaRLTLTegfvknS5BeZtWwiokdp10ssyipzU.BpUL_C..AAA.0.0.BpUoSg.AWeJNAhmeMz8JJef00uDJ7NLmJk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3031%3Btimestamp%3A1767015584",
+        "value": "v2%3Bclient_version%3A3031%3Btimestamp%3A1766902792",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101722606%3BT%3A29450259",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-29T13:40:25.265Z",
-        "lastAccessed": "2025-12-29T13:40:25.265Z"
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
+    },
+    {
+        "key": "wd",
+        "value": "891x1723",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100003669130622",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
+    },
+    {
+        "key": "fr",
+        "value": "1paQSjNND2zIVIwjm.AWfPIaBNXHblWiEKFvzERBqfbp6rKcgoOVzaRABlSGIeZSHVblY.BpUqMk..AAA.0.0.BpUqMk.AWeLjPv2GlRkkULoMg_LZsZWADU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
+    },
+    {
+        "key": "xs",
+        "value": "32%3AiairhOB1qNnttA%3A2%3A1767023393%3A-1%3A-1%3A%3AAcysyhEzbyn5CwCwPSxowA-op4cMpnqtqBbVP35oeg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22lm3%22%3A%22g.3033395573536298%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1767024616218%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-29T16:10:17.549Z",
+        "lastAccessed": "2025-12-29T16:10:17.549Z"
     }
 ]
