--- a/appstate.json
+++ b/appstate.json
@@ -1,39 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100024895179790%22%3A%22fzXKE3v2%22%2C%2261576600533648%22%3A%22IqYWarTa%22%7D",
+        "value": "%7B%2261582370889563%22%3A%22Etb5Mfex%22%2C%22100003669130622%22%3A%22VORFMiPg%22%2C%2261581788016902%22%3A%22HpllHW2R%22%2C%2261582581569812%22%3A%22rK8g46ul%22%2C%2261581646004263%22%3A%22zliAZvBR%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.212Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
-    },
-    {
-        "key": "datr",
-        "value": "wxZGaYjW2MioKvCHI4hlQsC8",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.259Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
         "key": "sb",
-        "value": "wxZGaZnT0K4le5zDLaqkKvrA",
+        "value": "hh9KaV67qn1qF2yhAix9Ol32",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B853x437x2.1042819023132324",
+        "key": "datr",
+        "value": "uRBVaQmbIQpA0ch-zC7Nb_ZP",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
         "key": "ps_n",
@@ -50,88 +41,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
-        "key": "pas",
-        "value": "100024895179790%3AtHECSCehHS%2C61576600533648%3AkrfywyMk3Z",
+        "key": "vpd",
+        "value": "v1%3B760x393x2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.1042819023132324",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
-    },
-    {
-        "key": "wd",
-        "value": "437x970",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
         "key": "c_user",
-        "value": "61576600533648",
+        "value": "61581646004263",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.269Z",
+        "lastAccessed": "2026-01-03T17:57:27.269Z"
     },
     {
         "key": "xs",
-        "value": "15%3ASUnGrIpAjD0aYg%3A2%3A1767460598%3A-1%3A-1",
+        "value": "33%3AElTBEmfzDeQE9w%3A2%3A1767361518%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
     },
     {
         "key": "fr",
-        "value": "0pRuWxSFCBhZfFafm.AWdsPOKUGx0b54AxawORb9oTsVEM5p7wwfydBTtagAjMh-_qNHU.BpRhbD..AAA.0.0.BpWU74.AWfEPDiE2ibIqKMfyk1stmEU1sA",
+        "value": "0ai16yDT0YOEXJBZO.AWd4K752Ce7kcYGpovoxmvkPiDpa8_bTXHPfqUjM3NzJC4FY8Is.BpVRC5..AAA.0.0.BpV8vy.AWe9B1UnTzkGr8QmYiVMg8pwUdI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
+    },
+    {
+        "key": "pas",
+        "value": "61581788016902%3AtA07Jx9O9d%2C61582581569812%3AnKxVA3GBm5%2C61581646004263%3AAsarf7O5HD",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
     },
     {
         "key": "fbl_st",
-        "value": "101030403%3BT%3A29457676",
+        "value": "100720930%3BT%3A29456025",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3041%3Btimestamp%3A1767460600",
+        "value": "v2%3Bclient_version%3A3038%3Btimestamp%3A1767361522",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-03T17:16:47.213Z",
-        "lastAccessed": "2026-01-03T17:16:47.213Z"
+        "creation": "2026-01-03T17:57:27.270Z",
+        "lastAccessed": "2026-01-03T17:57:27.270Z"
     }
 ]
